# faba

./: .gitignore  Cargo.toml  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: Methods.R  extendr-wrappers.R
doc/: m6a_data_analysis.md
src/: Makevars  Makevars.win  aggregate.rs  depth.rs  dnafreq.rs  entrypoint.c  faba-win.def  main.rs  sift.rs  util.rs
src/bam2bed/: main.rs
src/gff2bed/: main.rs
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/rust/src/aggregate/: mod.rs
src/rust/src/depth/: mod.rs  run.rs
src/rust/src/sift/: compare.rs  mod.rs  sifter.rs
src/rust/src/util/: bam.rs  dna.rs  file.rs  misc.rs  mod.rs
src/sift/: compare.rs  mod.rs  rules.rs  sifter.rs
src/util/: bam.rs  dna.rs  file.rs  gff.rs  misc.rs
